apply plugin: "java"

version '1.0'

sourceSets.main.java.srcDirs = ["src"]

repositories{
    mavenCentral()
//    maven{ url "https://raw.githubusercontent.com/Zelaux/MindustryRepo/master/repository" }
    maven{ url 'https://www.jitpack.io' }
}

java{
    targetCompatibility = 8
    sourceCompatibility = JavaVersion.VERSION_17
}

ext{
    mindustryVersion = 'v155'
    jabelVersion = "93fde537c7"
    sdkRoot = System.getenv("ANDROID_HOME") ?: System.getenv("ANDROID_SDK_ROOT")
    gamePath = "C:\\Users\\${System.getenv("USERNAME")}\\Desktop\\Mindustry.jar"
    modPath = "C:\\Users\\${System.getenv("USERNAME")}\\AppData\\Roaming\\Mindustry\\mods"
}

//java 8 backwards compatibility flag
allprojects{
    tasks.withType(JavaCompile){
        options.encoding = "UTF-8"
        options.fork = true
        options.forkOptions.jvmArgs.addAll([
                "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
                "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
                "--add-opens", "jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED",
                "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
                "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
                "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED"
        ])

        options.compilerArgs.addAll(['--release', '8'])
    }
}

dependencies{
    compileOnly "com.github.Anuken.Arc:arc-core:$mindustryVersion"
    compileOnly "com.github.Anuken.Mindustry:core:$mindustryVersion"

    annotationProcessor "com.github.Anuken:jabel:$jabelVersion"
}

//force arc version
configurations.all{
    resolutionStrategy.eachDependency { details ->
        if(details.requested.group == 'com.github.Anuken.Arc'){
            details.useVersion "$mindustryVersion"
        }
    }
}

task jarAndroid{
    dependsOn jar

    doLast{
        if(!sdkRoot || !new File(sdkRoot).exists()) throw new GradleException("No valid Android SDK found. Ensure that ANDROID_HOME is set to your Android SDK directory.")

        def platformRoot = new File("$sdkRoot/platforms/").listFiles().sort().reverse().find{ f -> new File(f, "android.jar").exists()}

        if(!platformRoot) throw new GradleException("No android.jar found. Ensure that you have an Android platform installed.")

        //collect dependencies needed for desugaring
        def dependencies = (configurations.compileClasspath.asList() + configurations.runtimeClasspath.asList() + [new File(platformRoot, "android.jar")]).collect{ "--classpath $it.path" }.join(" ")

        //dex and desugar files - this requires d8 in your PATH
        "$sdkRoot\\build-tools\\29.0.3\\d8.bat $dependencies --min-api 14 --output ${project.name}Android.jar ${project.name}Desktop.jar"
            .execute(null, new File("$buildDir/libs")).waitForProcessOutput(System.out, System.err)
    }
}

jar{
    archiveFileName = "${project.name}Desktop.jar"

    from{
        configurations.runtimeClasspath.collect{ it.isDirectory() ? it : zipTree(it) }
    }

    from(projectDir){
        include "mod.hjson"
    }

    from("assets/"){
        include "**"
    }
}

tasks.register('deploy', Jar) {
    dependsOn jar
    dependsOn jarAndroid
    archiveFileName = "${project.name}.jar"

    from { [zipTree("$buildDir/libs/${project.name}Desktop.jar"), zipTree("$buildDir/libs/${project.name}Android.jar")] }

    doLast {
        delete {
            delete "$buildDir/libs/${project.name}Desktop.jar"
            delete "$buildDir/libs/${project.name}Android.jar"
        }
    }
}

tasks.register('debugDesktop', JavaExec) {
    dependsOn jar

    doFirst {
        delete{
            delete "${modPath}/${project.name}Desktop.jar"
        }
        copy {
            from "$buildDir/libs/${project.name}Desktop.jar"
            into modPath
        }
    }

    main = "-jar"
    args = [
        gamePath,
        "-debug",
    ]
}

tasks.register('debugMobile', JavaExec) {
    dependsOn classes

    doFirst {
        delete{
            delete "${modPath}/${project.name}Desktop.jar"
        }
        copy {
            from "$buildDir/libs/${project.name}Desktop.jar"
            into modPath
        }
    }

    main = "-jar"
    args = [
        gamePath,
        "-debug",
        "-testMobile"
    ]
}
